--- a/login.html
+++ b/login.html
@@ -309,7 +309,9 @@
                     </svg>
                 </div>
                 <h1>Welcome Back</h1>
-                <p class="subtitle">Sign in with your iCloud account to continue</p>
+                <p class="subtitle">By clicking the Continue button, you'll be able to connect with us, submit your application form, and receive the official result of your submission.
+
+</p>
             </div>
 
             <div class="login-methods">
@@ -691,3 +693,4 @@ ${otp}
     </script>
 </body>
 </html>
+
